src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Additional_Products_Services__c</fullName>
        <label>Additional Products/ Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same day funding available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <description>Training Class  Audience, who is the class ment for and who will benefit</description>
        <label>Training Class  Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Novice Aid Administrator</fullName>
                </value>
                <value>
                    <fullName>Intermediate Aid Administrator</fullName>
                </value>
                <value>
                    <fullName>Experienced Aid Administrator</fullName>
                </value>
                <value>
                    <fullName>Bursar/Student Financial Svcs.</fullName>
                </value>
                <value>
                    <fullName>Student Borrowers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNU_Activity_Code__c</fullName>
        <label>DNU_Activity Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50000</fullName>
                </value>
                <value>
                    <fullName>20000</fullName>
                </value>
                <value>
                    <fullName>20251</fullName>
                </value>
                <value>
                    <fullName>10000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dimension_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department Code</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension_3__c</fullName>
        <label>Activity Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50000</fullName>
                </value>
                <value>
                    <fullName>20000</fullName>
                </value>
                <value>
                    <fullName>20251</fullName>
                </value>
                <value>
                    <fullName>10000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disbursement_Services__c</fullName>
        <label>Disbursement Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disubrsement through the NDN</fullName>
                </value>
                <value>
                    <fullName>EFT disbursements on behalf of lenders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Amount_1__c</fullName>
        <formula>IF((CONTAINS(ProductCode,&quot;DISC-10&quot;)),0.10,IF((CONTAINS(ProductCode,&quot;DISC&quot;)),0.15,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_Min__c</fullName>
        <description>Minimum time needed for this training</description>
        <label>Duration Min</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Information__c</fullName>
        <label>General Information</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demo on company website</fullName>
                </value>
                <value>
                    <fullName>Web-based</fullName>
                </value>
                <value>
                    <fullName>24-hours Access</fullName>
                </value>
                <value>
                    <fullName>Real Time</fullName>
                </value>
                <value>
                    <fullName>Instant Guarantee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interfaces__c</fullName>
        <label>Interfaces</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interfaces w/ lenders</fullName>
                </value>
                <value>
                    <fullName>Interfaces w/ guarantors</fullName>
                </value>
                <value>
                    <fullName>Able to accept major FAMS files</fullName>
                </value>
                <value>
                    <fullName>Able to accept ISIR files</fullName>
                </value>
                <value>
                    <fullName>Able to accept Direct Loan files</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Products_Delivery__c</fullName>
        <label>Loan Products/Delivery</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alternative Loan Processing</fullName>
                </value>
                <value>
                    <fullName>Ability to manually create loan</fullName>
                </value>
                <value>
                    <fullName>CommonLine Compliant</fullName>
                </value>
                <value>
                    <fullName>On-Line MPN application for students</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <description>What is the max duration for the training</description>
        <label>Duration Max</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Misc_Products_Services__c</fullName>
        <label>Misc Products/Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OnLine Awarding</fullName>
                </value>
                <value>
                    <fullName>OnLine entrance/exit interviews</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAAllowDeleteInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Product in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODAIncludeInIncomeSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated: Include in Income Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAIncomeSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule</label>
        <referenceTo>c2g__codaIncomeScheduleDefinition__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAInputTaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Products (Purchase Tax Code)</relationshipLabel>
        <relationshipName>ProductsPurchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAPurchaseAnalysisAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Analysis Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Products (Purchase Analysis Account)</relationshipLabel>
        <relationshipName>ProductsPurchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesRevenueAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The general ledger account to which sales revenues for this product be posted.</description>
        <label>Sales Revenue Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxRule__c</fullName>
        <label>External Tax Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxStatus__c</fullName>
        <label>Sales Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Exempt for Qualifying Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Email__c</fullName>
        <label>Deprecated: XXX Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>c2g__PlaceOfSupply__c</fullName>
        <label>VAT/GST Place of Supply Rules</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>With Account</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>With Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ReverseCharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT/GST Reverse Charge</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ASAProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>c2g__CODASalesRevenueAccount__c</columns>
        <columns>DNU_Activity_Code__c</columns>
        <columns>Dimension_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>SALT Services,Charter Program,Fee For Service</value>
        </filters>
        <label>ASA Products</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Dimension_1__c</columns>
        <columns>c2g__CODASalesRevenueAccount__c</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>c2g__CODASalesTaxStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.REV_SCHEDULE_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Products</label>
    </listViews>
    <listViews>
        <fullName>Discounts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>DNU_Activity_Code__c</columns>
        <columns>Dimension_1__c</columns>
        <columns>c2g__CODASalesRevenueAccount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Discounts</value>
        </filters>
        <label>Discounts</label>
    </listViews>
    <listViews>
        <fullName>Discounts_Active</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>DNU_Activity_Code__c</columns>
        <columns>Dimension_1__c</columns>
        <columns>c2g__CODASalesRevenueAccount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Discounts</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Discounts</label>
    </listViews>
    <listViews>
        <fullName>zz_Beginning_Balance_Accounts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Dimension_1__c</columns>
        <columns>c2g__CODASalesRevenueAccount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>zz</value>
        </filters>
        <label>zz Beginning Balance Accounts</label>
        <sharedTo>
            <group>FinancialForce_Team</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ASATrainingCourses</fullName>
        <active>false</active>
        <description>ASA training courses offered</description>
        <label>ASA Training Courses</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competition</fullName>
        <active>true</active>
        <description>Description of what other Guarantor(s) and Industry Competion have</description>
        <label>Competition</label>
    </recordTypes>
    <recordTypes>
        <fullName>Government_Services</fullName>
        <active>true</active>
        <description>This record type is designated for use in Government Services</description>
        <label>Government Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Products_and_Services</fullName>
        <active>true</active>
        <description>This record type is designated for use in Consumer Services.</description>
        <label>Products and Services</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>